Added Edit Button to Project

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,20 +1,21 @@
 <%# :title,:description,:project_link,:github_link %>
+<div id="project-form">
+  <%= simple_form_for @project, remote: true do |f| %>
 
-<%= simple_form_for @project, remote: true do |f| %>
-
-<div class="form-group">
-  <%= f.input :title %>
-</div>
-<div class="form-group">
-  <%= f.input :description %>
-</div>
-<div class="form-group">
-  <%= f.input :project_link %>
-</div>
-<div class="form-group">
-  <%= f.input :github_link %>
-</div>
-<div class="form-group">
-  <%= f.submit "Add New Project", class: "btn btn-primary btn-sm" %>
-</div>
-<% end %>
+  <div class="form-group">
+    <%= f.input :title %>
+  </div>
+  <div class="form-group">
+    <%= f.input :description %>
+  </div>
+  <div class="form-group">
+    <%= f.input :project_link %>
+  </div>
+  <div class="form-group">
+    <%= f.input :github_link %>
+  </div>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-primary btn-sm" %>
+  </div>
+  <% end %>
+<div id="project-form">
