--- a/app/assets/stylesheets/employments.scss
+++ b/app/assets/stylesheets/employments.scss
@@ -5,9 +5,12 @@
 .ui-menu-item {
   list-style-position: outside;
   list-style-type: none;
-  // background-color: white;
+  background-color: white;
 }
 
 .ui-autocomplete {
-  left: 194px !important;
+  width: 33% !important;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
