Change navbar and add home controller with landing action

--- a/app/assets/stylesheets/boostrap_and_override.scss
+++ b/app/assets/stylesheets/boostrap_and_override.scss
@@ -1,6 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.navbar {
+  background-color: #ab5443;
+}
+
+/****************** NAV BAR ******************/
 
 .last_message{
   background-color: beige;
