--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand">
-          <%=link_to( image_tag('logo.png', height: '100', width: '425'), root_path, :class=>"brand") %>
+          <%=link_to( image_tag('logo3.png', height: '50', width: '250'), root_path, :class=>"brand") %>
         </a>
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
+        <button type="button" class="navbar-toggle navbar-fixed-top collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
