adding user filter based on availability, style admin index page

--- a/app/views/users/admin.html.erb
+++ b/app/views/users/admin.html.erb
@@ -2,9 +2,9 @@
 
   <% page_header "Account List" %>
 
-  <%= button_to "Administrator Accounts Only", admin_filter_path(get_admin_random_string, get_filter_string), method: :get %>
+  <%= button_to "Administrator Accounts Only", admin_filter_path(get_admin_random_string, User::ADMIN), method: :get %>
   <br>
-  <%= button_to "All Accounts", admin_path(User::ADMIN), method: :get %>
+  <%= button_to "All Accounts", admin_path(get_admin_random_string), method: :get %>
   <br>
   <% @users.each do |u| %>
   <div class='well'>
