--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,41 +29,38 @@
           <li><%= link_to "SIGN OUT", sessions_path, method: :delete %></li>
           <li><%= link_to has_unread_messages?? (fa_icon('envelope') + " new msg!") : fa_icon('envelope'), conversations_path %>
           </li>
-
           <% else %>
           <li><%= link_to "NEW USER", new_user_path %></li>
           <li><%= link_to "LOG IN", new_session_path %></li>
           <% end %>
         </ul>
-
-        <% if user_signed_in? && current_user.admin %>
-        <ul class="nav navbar-nav navbar-right">
-          <%= form_tag(users_path, :method => "get", id: "search-form", class: "navbar-form navbar-left", role: "search") do %>
-          <div class="form-group">
-            <%= text_field_tag :search, params[:search], placeholder: "keyword", class: "form-control", required: true%>
-          </div>
-          <%= submit_tag "Search", :name => nil , class: "btn btn-default" %>
-          <% end %>
-        </ul>
-        <% end %>
+        <!-- <ul class="nav navbar-nav navbar-right">
+        <%= form_tag(users_path, :method => "get", id: "search-form", class: "navbar-form navbar-left", role: "search") do %>
+        <div class="form-group">
+        <%= text_field_tag :search, params[:search], placeholder: "keyword", class: "form-control", required: true%>
       </div>
-    </div>
-  </nav>
+      <%= submit_tag "Search", :name => nil , class: "btn btn-default" %>
+      <% end %>
+    </ul> -->
 
-  <% if notice %>
-  <div class="alert fade in alert-success">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <h4><%= notice %></h4>
   </div>
+</div>
+</nav>
 
-  <% elsif alert %>
-  <div class="alert fade in alert-danger">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <h4><%= alert %></h4>
-  </div>
-  <% end %>
+<% if notice %>
+<div class="alert fade in alert-success">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4><%= notice %></h4>
+</div>
 
-  <%= yield %>
+<% elsif alert %>
+<div class="alert fade in alert-danger">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4><%= alert %></h4>
+</div>
+<% end %>
+
+<%= yield %>
 
 </body>
 </html>
