--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -12,3 +12,11 @@
 #project-form div{
   display: inline-block;
 }
+
+#project-form .wide {
+  width: 75%;
+}
+
+// #project-form .tall {
+//   height: 10em;
+// }
