--- a/app/views/educations/_education.html.erb
+++ b/app/views/educations/_education.html.erb
@@ -7,27 +7,36 @@ field
  %>
 
 <div id="<%= dom_id(education) %>" class="container-fluid">
-  <div class="col-lg-1 grey">Level: </div>
-  <div class="col-lg-1"><%= education.level %></div>
+  <div class="col-lg-12">
+    
+    <div class="col-lg-2 grey">Level of Study: </div>
+    <div class="col-lg-2"><%= education.level %></div>
 
-  <div class="col-lg-1 grey">Field: </div>
-  <div class="col-lg-1"><%= education.field %></div>
+    <div class="col-lg-2 grey">Field of Study: </div>
+    <div class="col-lg-2"><%= education.field %></div>
+  </div>
   
-  <div class="col-lg-1 grey">Year: </div>
-  <div class="col-lg-1"><%= education.grade_year.strftime("%Y-%m") %></div>
+  <div class="col-lg-12">
+      
+    <div class="col-lg-2 grey">Year: </div>
+    <div class="col-lg-2"><%= education.grade_year.strftime("%Y-%m") %></div>
 
-  <div class="col-lg-1 grey">School: </div>
-  <div class="col-lg-1"><%= link_to education.school_name, "#{education.school_link}" %></div>
+    <div class="col-lg-2 grey">School: </div>
+    <div class="col-lg-2"><%= link_to education.school_name, "#{education.school_link}" %></div>
+  </div>
 
   
   <div class="col-lg-1"></div>
   
-  <div class="col-lg-2"><% if can? :manage, education %>
-    <%= link_to "Edit", edit_education_path(education), remote: true %>
-    <%= link_to "Delete", education_path(education),
-                          method: :delete,
-                          remote: true,
-                          data: {confirm: "Are you sure?"} %>
-    <% end %></div>
+  <div class="col-lg-12">
+    <% if can? :manage, education %>
+      <%= link_to "Edit", edit_education_path(education), remote: true, class: 'btn btn-primary btn-sm' %>
+      <%= link_to "Delete", education_path(education),
+                            method: :delete,
+                            class: 'btn btn-danger btn-sm',
+                            remote: true,
+                            data: {confirm: "Are you sure?"} %>
+    <% end %>
+  </div>
 
 </div>
