--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,23 +1,21 @@
   <div id="<%= dom_id(project) %>" class="container-fluid">
-    <div class="col-lg-1 grey">Title: </div>
-    <div class="col-lg-1"><%= project.title %></div>
-
-    <div class="col-lg-1 grey">Description: </div>
-    <div class="col-lg-5"><%= project.description %></div>
-    
-    <div class="col-lg-1"><%= link_to "Project Link", project.project_link%></div>
-
-    <div class="col-lg-1"><%= link_to (fa_icon "github")+"GitHub Link", project.github_link %></div>
-
+    <div class="col-lg-12"><h3><%= project.title %></h3></div>
+    <div class="col-lg-1"><%= link_to "Project Link", "#{project.project_link} "%></div>
+    <div class="col-lg-1"><%= link_to (fa_icon "github")+"GitHub Link", "#{project.github_link}" %></div>
+    <div class="col-lg-12">
+        <div class="col-lg-1 grey">Description: </div>
+        <div class="col-lg-11"><%= project.description %></div>
+    </div>
     
     <div class="col-lg-1"></div>
     
-    <div class="col-lg-1">
+    <div class="col-lg-12">
       <% if can? :destroy, project %>
-        <%= link_to "Edit", edit_project_path(project), remote: true %>
+        <%= link_to "Edit", edit_project_path(project), remote: true, class: "btn btn-primary btn-sm" %>
         <%= link_to "Delete", project_path(project),
                               method: :delete,
                               remote: true,
+                              class: "btn btn-danger btn-sm",
                               data: {confirm: "Are you sure?"} %>
       <% end %>
     </div>
