--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -16,11 +16,12 @@
   <div class="col-lg-1"></div>
   <div class="col-lg-2">  
     <% if can? :manage, skill %>
-    <%= link_to "Edit", edit_skill_path(skill) , remote: true %>
+    <%= link_to "Edit", edit_skill_path(skill) , remote: true, class: "btn btn-primary btn-sm" %>
 
     <%= link_to "Delete", skill_path(skill),
                           method: :delete,
                           remote: true,
+                          class: "btn btn-danger btn-sm",
                           data: {confirm: "Are you sure?"} %>
     <% end %>
   </div>
