--- a/app/views/educations/_form.html.erb
+++ b/app/views/educations/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :school_name, label: false, placeholder: "School Name" %>
   </div>
   <div class="form-group">
-    <%= f.input :school_link, label: false, placeholder: "Link to the Scool", wrapper_html: { class: 'wide' } %>
+    <%= f.input :school_link, label: false, placeholder: "Link to the School", wrapper_html: { class: 'wide' } %>
   </div>
   <div class="form-group">
     <%= f.input :grade_year, order: [:month, :year], discard_hour: true, start_year: 1980, end_year: Date.today.year, label: "Graduation Year" %>
