--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -51,7 +51,7 @@
               </div>
             </div> <%# /col-4- %>
 
-            <div class="col-md-8 basic-right">
+            <div class="col-md-8 basic-right-col">
               <div class="row">
                 <div class="edit-summary col-xs-12">
                   <%= f.input :summary, :error => false, :input_html => {:maxlength => 140} %>
