--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id(skill) %>" class="container-fluid">
-  <div class="col-lg-1 grey">
+  <div class="col-lg-1 description">
     <%= skill.category.name %>: 
   </div>
   <div class="col-lg-1 ">
@@ -13,8 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-2">  
+  <div class="col-lg-2 action">  
     <% if can? :manage, skill %>
     <%= link_to "Edit", edit_skill_path(skill) , remote: true, class: "btn btn-primary btn-sm" %>
 
