--- a/app/views/educations/_education.html.erb
+++ b/app/views/educations/_education.html.erb
@@ -9,24 +9,22 @@ field
 <div id="<%= dom_id(education) %>" class="container-fluid">
   <div class="col-lg-12">
     
-    <div class="col-lg-2 grey">Level of Study: </div>
+    <div class="col-lg-2 description">Level of Study: </div>
     <div class="col-lg-2"><%= education.level %></div>
 
-    <div class="col-lg-2 grey">Field of Study: </div>
+    <div class="col-lg-2 description">Field of Study: </div>
     <div class="col-lg-2"><%= education.field %></div>
   </div>
   
   <div class="col-lg-12">
       
-    <div class="col-lg-2 grey">Year: </div>
-    <div class="col-lg-2"><%= education.grade_year.strftime("%Y-%m") %></div>
+    <div class="col-lg-2 description">Year: </div>
+    <div class="col-lg-2"><%= formatted_date_time(education.grade_year) %></div>
 
-    <div class="col-lg-2 grey">School: </div>
-    <div class="col-lg-2"><%= link_to education.school_name, "#{education.school_link}" %></div>
+    <div class="col-lg-2 description">School: </div>
+    <%# absolute_url = "http://#{education.school_link}" if (/^http:\/\// =~ education.school_link) == nil %>
+    <div class="col-lg-2"><%= link_to education.school_name, education.school_link %></div>
   </div>
-
-  
-  <div class="col-lg-1"></div>
   
   <div class="col-lg-12">
     <% if can? :manage, education %>
