--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -3,8 +3,7 @@
     <div class="col-lg-1"><%= link_to "Project Link", "#{project.project_link} "%></div>
     <div class="col-lg-1"><%= link_to (fa_icon "github")+"GitHub Link", "#{project.github_link}" %></div>
     <div class="col-lg-12">
-        <div class="col-lg-1 grey">Description: </div>
-        <div class="col-lg-11"><%= project.description %></div>
+        <%= project.description %>
     </div>
     
     <div class="col-lg-1"></div>
