--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,9 +9,10 @@
   <div class="row">
     <% @users.each do |u| %>
     <div class='col-xs-12 col-sm-6 col-md-3'>
-      <div class="well">
+      <div>
         <%=image_tag u.image.url(:medium), class: "user-dp center-block img-rounded" %>
-        <%= link_to u.full_name, u%>
+        <h4><%= link_to u.full_name, u%></h4>
+        <hr />
         <!-- (Account created: -->
         <!-- <%#= ((Time.now - u.created_at).to_i / (60*60*24*365.25)).to_i %> years and
         <%#= ((Time.now - u.created_at).to_i / (60*60*24)).to_i %> days ago) -->
