Profile V3 with update jQuery and animation and bug fix

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.panel-body .new-toggle {
+  padding: 2px 0;
+}
+
 .apple_pagination {
   background: #f1f1f1;
   border: 1px solid #e5e5e5;
