--- a/app/assets/stylesheets/employments.scss
+++ b/app/assets/stylesheets/employments.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the employments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#new-employment #employment-form{
+  display: none;
+}
+
 .employments div {
   padding: 2px 0;
 }
