--- a/app/views/skills/skill_create_success.js.erb
+++ b/app/views/skills/skill_create_success.js.erb
@@ -1,5 +1,5 @@
-$('.skills').prepend('<%= j render "skill", skill: @skill %>');
+$('<%= j render "skill", skill: @skill %>').hide().appendTo('.skills').slideDown();
 
 <% @skill = Skill.new %>
 
-$('#skill-form').html('<%= j render "form" %>');
+$('#new_skill').html('<%= j render "form" %>').child().slideUp();
