--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -4,9 +4,6 @@
     <div class="panel-heading">
       <h4>
         Skills
-        <button id="toggle-skill-form" class="btn btn-warning btn-xs pull-right">
-          Add Skills
-        </button>
       </h4>
     </div>
     <div class="panel-body">
@@ -17,8 +14,14 @@
         <% end %>
       </div>
       <% if can? :manage, @user %>
-          <%# byebug %>
+        <div class="col-lg-12 new-toggle">
+          <button id="toggle-skill-form" class="btn btn-warning btn-sm">
+                  Add New Skill
+                </button>
+        </div>
+        <div id="new-skill">
           <%= render 'skills/form' %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -27,9 +30,6 @@
     <div class="panel-heading">
       <h4>
         Projects
-        <button id="toggle-project-form" class="btn btn-warning btn-xs pull-right">
-          Add Projects
-        </button>
       </h4>
     </div>
     <div class="panel-body">
@@ -40,7 +40,14 @@
         <% end %>
       </div>
       <% if can? :manage, @user %>
-        <%= render 'projects/form' %>
+        <div class="col-lg-12 new-toggle">
+          <button id="toggle-project-form" class="btn btn-warning btn-sm ">
+          Add New Project
+          </button>
+        </div>
+        <div id="new-project">
+          <%= render 'projects/form' %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -48,9 +55,6 @@
   <div class="panel panel-info">
     <div class="panel-heading">
       <h4>Education
-        <button id="toggle-education-form" class="btn btn-warning btn-xs pull-right">
-          Add Education History
-        </button>
       </h4>
     </div>
     <div class="panel-body">
@@ -61,7 +65,14 @@
         <% end %>
       </div>
       <% if can? :manage, @user %>
+        <div class="col-lg-12 new-toggle">
+          <button id="toggle-education-form" class="btn btn-warning btn-sm">
+          Add New Education History
+        </button>
+        </div>
+        <div id="new-education">
           <%= render 'educations/form' %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -70,9 +81,6 @@
     <div class="panel-heading">
       <h4>
         Employment
-        <button id="toggle-employment-form" class="btn btn-warning btn-xs pull-right">
-          Add Employment History
-        </button>
       </h4>
     </div>
     <div class="panel-body">
@@ -83,7 +91,14 @@
         <% end %>
       </div>
       <% if can? :manage, @user %>
-        <%= render 'employments/form' %>
+        <div class="col-lg-12 new-toggle">
+          <button id="toggle-employment-form" class="btn btn-warning btn-sm">
+          Add New Employment History
+        </button>
+        </div>
+        <div id="new-employment">
+          <%= render 'employments/form' %>
+        </div>
       <% end %>
     </div>
   </div>
