fixing all create buttons form education, employment skill and projects to properly slide up on success and re-slide down on failure

--- a/app/views/educations/education_create_success.js.erb
+++ b/app/views/educations/education_create_success.js.erb
@@ -1,5 +1,4 @@
 $('<%= j render "education", education: @education %>').hide().appendTo('.educations').slideDown();
-
 <% @education = Education.new %>
-
 $('#new_education').html('<%= j render "form" %>').child().slideUp();
+$('#toggle-education-form').click();
