--- a/app/views/skills/skill_create_failure.js.erb
+++ b/app/views/skills/skill_create_failure.js.erb
@@ -1,1 +1,2 @@
-$('#skill-form').html('<%= j render "form" %>')
+$('#skill-form').html('<%= j render "form" %>');
+$("#skill-form").children().slideDown();
