--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,9 +9,9 @@
       <%= f.input :summary %>
       <%= f.input :description %>
       <%= f.label 'Social Media' %>
-      <%= f.input :linkedin, as: :url, label: "LinkedIn Username" %>
-      <%= f.input :github, as: :url, label: "GitHub Username" %>
-      <%= f.input :twitter, as: :url, label: "Twitter Username" %>
+      <%= f.input :linkedin, as: :url, label: "LinkedIn Username", placeholder:"linkedin username, eg. 'jennifer-li-51788156'" %>
+      <%= f.input :github, as: :url, label: "GitHub Username", placeholder:"github username, eg. 'jennli'" %>
+      <%= f.input :twitter, as: :url, label: "Twitter Username", placeholder:"twitter username, eg. 'lidongning1108'" %>
       <%= f.label "Available for recruiting?" %>
       <%= f.check_box :is_available %>
       <%= f.input :image %>
