--- a/app/views/employments/employment_create_success.js.erb
+++ b/app/views/employments/employment_create_success.js.erb
@@ -1,5 +1,4 @@
 $('<%= j render "employment", employment: @employment %>').hide().appendTo('.employments').slideDown();
-
 <% @employment = Employment.new %>
-
-$('#new_employment').html('<%= j render "form" %>').child().slideUp();
+$('#new_employment').html('<%= j render "form" %>').children().slideUp();
+$('#toggle-employment-form').click();
