--- a/app/views/skills/skill_create_failure.js.erb
+++ b/app/views/skills/skill_create_failure.js.erb
@@ -1,2 +1,2 @@
-$('#new-skill #skill-form').html('<%= j render "form" %>')
 $('#new-skill #skill-form').html('<%= j render "form" %>');
+$("#new-skill #skill-form").children().slideDown();
