bug fixes, change theme to red

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -18,6 +18,6 @@
     <%= select_tag 'recipients', recipients_options, multiple: true, class: 'form-control chosen-it' %>
   </div>
 
-  <%= submit_tag 'Send', class: 'btn btn-primary' %>
+  <%= submit_tag 'Send', class: 'btn btn-danger' %>
 <% end %>
 </div>
