--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,18 +1,18 @@
 <div class="row">
   <h1>Profile</h1>
 
-  <div class="col-md-3" id="leftCol">
+  <!-- <div class="col-md-3" id="leftCol">
     <ul class="nav nav-stacked navbar-bright" id="sidebar">
       <li><a href="#skills-header">Skills</a></li>
       <li><a href="#projects-header">Projects</a></li>
       <li><a href="#education-header">Education</a></li>
       <li> <a href="#employment-header">Employment</a></li>
     </ul>
-  </div>
+  </div> -->
 
 </div>
 <div class="container-fluid">
-  <div class="panel panel-info">
+  <div class="panel panel-danger">
     <div class="panel-heading">
       <h4 id="skills-header">
         Skills
@@ -38,7 +38,7 @@
     </div>
   </div>
   <hr>
-  <div class="panel panel-info">
+  <div class="panel panel-danger">
     <div class="panel-heading">
       <h4 id="projects-header">
         Projects
@@ -64,7 +64,7 @@
     </div>
   </div>
   <hr>
-  <div class="panel panel-info">
+  <div class="panel panel-danger">
     <div class="panel-heading">
       <h4 id="education-header">Education
       </h4>
@@ -89,7 +89,7 @@
     </div>
   </div>
   <hr>
-  <div class="panel panel-info">
+  <div class="panel panel-danger">
     <div class="panel-heading">
       <h4 id='employment-header'>
         Employment
@@ -117,10 +117,10 @@
 
 </div>
 </div>
-<style>
 
+<!-- <style>
 .navbar-bright {
-  background-color:lightblue;
+  background-color:lightred;
   color:#fff;
 }
 
@@ -139,7 +139,8 @@
 }
 .nav-stacked{
   margin-left: 70%;
-  border-style: groove;
+  /*border-style: groove;*/
+  opacity: 0.5;
 }
 @media (min-width: 979px) {
   #sidebar.affix-top {
@@ -175,4 +176,4 @@ $body.scrollspy({
   target: '#leftCol',
   offset: navHeight
 });
-</script>
+</script> -->
