--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
 
-  <div class="panel panel-info">
+  <div class="panel panel-danger">
     <div class="panel-heading">
       <%= @user.first_name %>'s Basic Info
     </div>
