--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,14 +1,15 @@
-<h1>Change Your Password</h1>
-<%= form_for @user, url: password_reset_path(@user.password_reset_token),
-html: { method: :patch } do |f| %>
-<div>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-</div>
+<div class="container">
+
+  <h1>Change Your Password</h1>
+  <%= form_for @user, url: password_reset_path(@user.password_reset_token), method: :patch  do |f| %>
+  <div>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+  <br>
+  <%= f.submit 'Change Password' %>
+  <% end %>
 </div>
-<br>
-<%= f.submit 'Change Password' %>
-<% end %>
