--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "BROWSE STUDENTS", root_path %></li>
-          <li><%= link_to "View Shortlist", users_shortlists_path %></li>
+          <li><%= link_to "VIEW SHORTLIST", users_shortlists_path %></li>
           <% if user_signed_in? %>
           <li><%= link_to "#{current_user.full_name}'s Profile", user_path(current_user)%></li>
           <li><%= link_to "SIGN OUT", sessions_path, method: :delete %></li>
