--- a/app/views/users_shortlists/add_successful.js.erb
+++ b/app/views/users_shortlists/add_successful.js.erb
@@ -1,2 +1,6 @@
+toastr.options = {
+  "closeButton": true,
+  "positionClass": "toast-bottom-right"
+}
 toastr.success('Added to shortlist successfully!');
 $('#shortlist-button').html("<%= j link_to "Remove from Shortlist", users_shortlists_path(id: @user.id), remote: true, method: :delete %>");
