--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,6 +43,7 @@
         </section>
         <section class="col-lg-9 col-md-12 summary-container">
           <div class="row">
+            <div class="row col-xs-12"> 
             <h1 class="profile-name-header"><%= @user.full_name %></h1>
             <% if can? :manage, @user %>
             <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-danger btn-xs" %>
@@ -54,6 +55,8 @@
               <h3>Not available</h3> <i class="fa fa-thumbs-down"></i>
               <% end %>
             </span>
+            </div>
+            <div class="row col-xs-12">
             <p><i class="fa fa-envelope"></i>&nbsp; <%= link_to "#{@user.email}", user_contact_path(@user) %></p>
             <p><i class="fa fa-file"></i>&nbsp; <%=link_to 'Resume', @user.attachment.url %></p>
             <p id="shortlist-button">
@@ -63,7 +66,9 @@
                 <%= link_to "Add to Shortlist", users_shortlists_path(id: @user.id), remote: true, method: :post %>
               <% end %>
             </p>
+            </div>
           </div>
+
           <p><em><%= @user.summary %></em></p>
           <p>
             <%= markdown(@user.description) %>
