Add autocomplete functionality and styling to school names

--- a/app/assets/stylesheets/boostrap_and_override.scss
+++ b/app/assets/stylesheets/boostrap_and_override.scss
@@ -9,6 +9,10 @@ a:hover {
   color: #d54944;
 }
 
+span.ui-helper-hidden-accessible {
+  display: none;
+}
+
 /****************** NAV BAR ******************/
 
 .navbar {
