--- a/app/assets/stylesheets/boostrap_and_override.scss
+++ b/app/assets/stylesheets/boostrap_and_override.scss
@@ -23,6 +23,33 @@ ul.nav a {
   color: #ff8787 !important;
 }
 
+nav.navbar.navbar-default {
+  margin-bottom: 0;
+}
+
+
+/****************** FRONT PAGE ******************/
+
+.front-page-btn {
+  margin-top: 20px;
+}
+
+.front-page-users {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+
+.seo-footer {
+  padding-top: 30px;
+}
+
+.seo-footer a {
+  margin: 0 10px;
+}
+
+
 /* Carousel */
 
 #quote-carousel {
@@ -194,3 +221,6 @@ abbr[title] {
   color: #FA5858;
   display: none;
 }
+
+
+
