--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="row">
     <% @users.each do |u| %>
-    <div class='col-xs-12 col-sm-6 col-md-3'>
+    <div class='col-xs-12 col-sm-6 col-md-3 front-page-users'>
       <div>
         <%=image_tag u.image.url(:medium), class: "user-dp center-block img-rounded" %>
         <h4><%= link_to u.full_name, u%></h4>
